Fixed spacing

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -122,11 +122,16 @@
   &-logo{
     overflow: hidden;
     text-align: center;
+    margin: 20px;
     &-resize{
       width: inherit;
       width: 200px;
       height: 45px;
+      margin-left: 8px;
+      margin-right: 8px;
+      
       display: inline-block;
+
     }
   }
 }
